--- a/src/SpecsBar/SpecsBar.css
+++ b/src/SpecsBar/SpecsBar.css
@@ -1,5 +1,4 @@
 .spec-unique {
-	border: 1px solid black;
 	color: #eeeeee;
 }
 .spec-element {
@@ -10,8 +9,25 @@
 .specs-bar {
 	width: 50vw;
 	margin: 0 auto;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 .text-center {
 	text-align: center;
 }
+
+#diff-spec-container2 {
+	border-left: 2px solid white;
+	box-shadow: -10px 0px 14px -4px white;
+    -moz-box-shadow: -10px 0px 14px -4px white;
+    -webkit-box-shadow: -10px 0px 14px -14px white;
+}
+
+#diff-spec-container3 {
+	border-left: 2px solid white;
+	box-shadow: -10px 0px 14px -4px white;
+    -moz-box-shadow: -10px 0px 14px -4px white;
+    -webkit-box-shadow: -10px 0px 14px -14px white;
+}
+
