solved centering; added text divs

--- a/src/TagsBar/SingleTag/SingleTag.css
+++ b/src/TagsBar/SingleTag/SingleTag.css
@@ -4,7 +4,7 @@
 	color: #7ae47a;
 	font-family: 'Nunito', sans-serif;
 	font-size: 14px;
-	margin: 15px;
+	margin: 10px 15px;
 	height: 3em;
 	padding-left: 1.5em;
 	padding-right: 1.5em;
