--- a/src/RecipeBase/RecipeBase.css
+++ b/src/RecipeBase/RecipeBase.css
@@ -2,11 +2,7 @@
   margin: 0px;
   padding: 0px;
   background-color: #222222;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  text-align: center;
 }
 
 .recipe-path {
@@ -27,11 +23,8 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#separator-1 {
+  height: 2px;
+  background-color: #eeeeee;
+  margin-bottom: 20px;
 }
