finished body text

--- a/src/IngredientList/IngredientList.css
+++ b/src/IngredientList/IngredientList.css
@@ -5,3 +5,19 @@
 #ingredient-list {
 	color: white;
 }
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+li {
+	padding-left: 1em;
+	text-indent: -.7em;
+}
+
+li::before {
+	content: "• ";
+	color: silver;
+}
