began implementing comment box

--- a/src/Directions/SingleDirection/SingleDirection.css
+++ b/src/Directions/SingleDirection/SingleDirection.css
@@ -1,10 +1,12 @@
 .single-direction {
 	display: inline;
 	color: pink;
+	text-align: left;
 }
 
 .direction-index {
 	display: inline;
+	margin-right: 5px;
 }
 
 .direction-action {
